--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: Release
 
 on:
   push:
-    branches:
+    branches-ignore:
       - main
+  pull_request:
+
 jobs:
   lint:
     name: Lint
@@ -28,17 +30,6 @@ jobs:
     name: Test
     needs: [ lint ]
     runs-on: ubuntu-latest
-    services:
-      redis:
-        image: redis
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    env:
-      BROKER_URL: 'redis://redis:6379'
-      BROKER_BACKEND: 'redis://redis:6379'
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
