--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,8 @@ name: Release
 
 on:
   push:
-    branches-ignore:
+    branches:
       - main
-  pull_request:
 
 jobs:
   lint:
@@ -30,6 +29,16 @@ jobs:
     name: Test
     needs: [ lint ]
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -46,6 +55,9 @@ jobs:
       - name: Test with Python
         run: |
           poetry run python manage.py test --timing
+        env:
+          BROKER_URL: 'redis://localhost:6379'
+          BROKER_BACKEND: 'redis://localhost:6379'
   coverage:
     name: Coverage
     needs: [ test ]
