--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           - 6379:6379
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.9
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
@@ -62,19 +62,34 @@ jobs:
     name: Coverage
     needs: [ test ]
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install Python
+      - name: Set up Python 3.9
         uses: actions/setup-python@v3
         with:
-          python-version: 3.7
-      - name: Setup Poetry
-        uses: Gr1N/setup-poetry@v7
+          python-version: 3.9
+      - name: Install poetry
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
       - name: Install dependencies
         run: poetry install
       - name: Coverage
         run: poetry run coverage run manage.py test
+        env:
+          BROKER_URL: 'redis://localhost:6379'
+          BROKER_BACKEND: 'redis://localhost:6379'
       - name: Coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
