--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,9 +30,19 @@ jobs:
     name: Test
     needs: [ lint ]
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.9
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
@@ -46,3 +56,6 @@ jobs:
       - name: Test with Python
         run: |
           poetry run python manage.py test --timing
+        env:
+          BROKER_URL: 'redis://localhost:6379'
+          BROKER_BACKEND: 'redis://localhost:6379'
