--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,34 @@ celery = "^5.2.7"
 devind-helpers = "^1.0.0"
 python-dotenv = "^0.20.0"
 strawberry-graphql-django = "^0.3.1"
-strawberry-graphql = "^0.116.3"
-strawberry-django-plus = "^1.16.0"
+strawberry-graphql = "^0.116.4"
+strawberry-django-plus = "^1.17.0"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^4.0.1"
+flake8-import-order = "^0.18.1"
+flake8-docstrings = "^1.6.0"
+flake8-builtins = "^1.5.3"
+flake8-quotes = "^3.3.1"
+flake8-comprehensions = "^3.8.0"
+flake8-eradicate = "^1.2.0"
+flake8-simplify = "^0.19.2"
+flake8-spellcheck = "^0.28.0"
+pep8-naming = "^0.13.0"
+flake8-use-fstring = "^1.3"
+flake8-annotations = "^2.7.0"
+coveralls = "^3.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.semantic_release]
+version_variable = [
+    "devind_dictionaries/__init__.py:__version__",
+    "pyproject.toml:version"
+]
+branch = "main"
+upload_to_pypi = true
+upload_to_release = true
+build_command = "pip install poetry && poetry build"
